--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Reyhanlı Kartlar</title>
-  <meta name="description" content="A collection of moments for Reyhan" />
+  <meta name="description" content="A collection of cards for Reyhan" />
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/logo.png" />
@@ -14,14 +14,14 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://reyhanlikartlar.vercel.app/" />
   <meta property="og:title" content="Reyhanlı Kartlar" />
-  <meta property="og:description" content="A collection of moments for Reyhan" />
+  <meta property="og:description" content="A collection of cards for Reyhan" />
   <meta property="og:image" content="https://reyhanlikartlar.vercel.app/logo.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://reyhanlikartlar.vercel.app/" />
   <meta property="twitter:title" content="Reyhanlı Kartlar" />
-  <meta property="twitter:description" content="A collection of moments for Reyhan" />
+  <meta property="twitter:description" content="A collection of cards for Reyhan" />
   <meta property="twitter:image" content="https://reyhanlikartlar.vercel.app/logo.png" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
